syntax = "proto2";
option java_package = "com.aly.codex.pay.proto";
option go_package = "./proto";

// 支付订单验证地址: 充值服地址/rc/verify, 返回ApiResult
message PayReceipt {
    required string receipt = 1;        // 订单数据
    required string gameId = 2;         // 游戏ID
    required string serverId = 3;       // 服务器ID
    required string passport = 4;       // 账号ID
    required string playerId = 5;       // 玩家ID
    required string playerName = 6;     // 玩家名称
    required string channel = 7;        // 支付渠道. google, apple
    optional string signature = 8;      // Google订单检验签名数据
    optional string locale = 9;      // 区域码（当前设置的区域）
    optional int64 createTime = 10;      // 账号注册时间
}

// 查询订阅地址: 充值服地址/rc/subs, 返回 QuerySubs.Ret
message QuerySubs {
    required string gameId = 1;         // 游戏ID
    required string serverId = 2;       // 服务器ID
    required string playerId = 3;       // 玩家ID

    message Subscription {
        required string productId = 1;  // 产品ID
        required int64 leftMills = 2;  // 剩余时间(毫秒)
    }

    message Ret {
        required int32 code = 1;                   // 查询结果. 0: 成功, 其它: 失败
        repeated QuerySubs.Subscription subs = 2;   // 订阅数据
    }
}

//通用返回
message ManageRet {
  required int32 code = 1; // 错误码  0 表示成功
  optional bytes data = 2; // 成功返回的数据
  optional string msg = 3; // 消息
}

message PayNotify {
  required string orderID = 1; //订单ID
  required string itemID = 2; //商品ID
  required string playerID = 3; //玩家ID
  required string platformCode = 4; // 商品所在平台编码
  required int64 expireTime = 5; // 过期时间
  required int64 purchaseTime = 6; // 支付/订阅时间

  message Ret {
    required string orderID = 1; // 订单ID
    required int32 rankPoints = 2; // 段位积分
    required int64 credits = 3; // 点券剩余量
    required int64 money = 4; // 钻石剩余量
    required int64 coin = 5; // 当前金币
  }
}

// code取值如下:
// c01, // 正常处理成功
// c02, // 服务器异常
// c03, // 处理失败(错误消息)
message ApiResult {
    required string code = 1; //
    optional string msg = 2; //
    optional int32 errorCode = 3; //
}